--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
