--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ngrok": "ngrok http 8080 -host-header=\"localhost:8080\"",
     "start": "NODE_ENV=development webpack-dev-server  --env=development ",
+    "proxy": "lcp --proxyUrl https://jobs.github.com/positions",
     "build": "NODE_ENV=production webpack --env=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,11 +22,14 @@
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.4",
+    "local-cors-proxy": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-render-markup": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.2.1"
