--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-paginate": "^7.1.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.2.1"
