--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.15.4",
     "react-icons": "^3.11.0",
     "react-paginate": "^7.1.0",
     "react-router-dom": "^5.2.0",
